fullSandbox11072023/force-app/main/default/objects/Cross_Reference_Project_Item__c/Cross_Reference_Project_Item__c.object-meta.xml
<CustomObject>
    <label>Cross Reference Project Item</label>
    <nameField>
        <displayFormat>XRI-{00000000}</displayFormat>
        <label>Cross Reference Project Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cross Reference Project Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>