fullSandbox11072023/force-app/main/default/objects/Cross_Reference_Project_Item__c/fields/Code_1_Description__c.field-meta.xml
<CustomField>
    <fullName>Code_1_Description__c</fullName>
    <formula>Cross_Reference__r.Product__r.Description</formula>
    <label>Code 1 Description</label>
    <type>Text</type>
</CustomField>