fullSandbox11072023/force-app/main/default/objects/Cross_Reference_Project_Item__c/fields/Code_1_Qty_Case__c.field-meta.xml
<CustomField>
    <fullName>Code_1_Qty_Case__c</fullName>
    <formula>text(Cross_Reference__r.Product__r.Each_per_Case__c)</formula>
    <label>Code 1 Qty/Case</label>
    <type>Text</type>
</CustomField>