fullSandbox11072023/force-app/main/default/objects/Cross_Reference_Project_Item__c/fields/Competitive_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Product_Code__c</fullName>
    <label>Competitive Product Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>