fullSandbox11072023/force-app/main/default/objects/Cross_Reference_Project_Item__c/fields/Cross_Reference_1__c.field-meta.xml
<CustomField>
    <fullName>Cross_Reference_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cross Reference 2</label>
    <referenceTo>Cross_Reference__c</referenceTo>
    <relationshipLabel>Cross Reference Project Items (Cross Reference 1)</relationshipLabel>
    <relationshipName>Cross_Reference_Project_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>