fullSandbox11072023/force-app/main/default/objects/Cross_Reference_Project_Item__c/fields/Cross_Reference__c.field-meta.xml
<CustomField>
    <fullName>Cross_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cross Reference 1</label>
    <referenceTo>Cross_Reference__c</referenceTo>
    <relationshipLabel>Cross Reference Project Items</relationshipLabel>
    <relationshipName>Cross_Reference_Project_Items</relationshipName>
    <type>Lookup</type>
</CustomField>