fullSandbox11072023/force-app/main/default/objects/Cross_Reference_Project_Item__c/fields/Cross_Reference_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Cross_Reference_Code_2__c</fullName>
    <formula>Cross_Reference_1__r.Product__r.ProductCode</formula>
    <label>Cross Reference Code 2</label>
    <type>Text</type>
</CustomField>