fullSandbox11072023/force-app/main/default/objects/Cross_Reference_Project_Item__c/fields/Cross_Reference_Project__c.field-meta.xml
<CustomField>
    <fullName>Cross_Reference_Project__c</fullName>
    <label>Cross Reference Project</label>
    <referenceTo>Cross_Reference_Project__c</referenceTo>
    <relationshipLabel>Cross Reference Project Items</relationshipLabel>
    <relationshipName>Cross_Reference_Project_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>