fullSandbox11072023/force-app/main/default/objects/Cross_Reference_Project_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Competitive_Product_Code__c</columns>
    <columns>Cross_Reference__c</columns>
    <columns>Cross_Reference_1__c</columns>
    <columns>Cross_Reference_2__c</columns>
    <columns>Cross_Reference_3__c</columns>
    <columns>Cross_Reference_Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>